--- a/style.css
+++ b/style.css
@@ -1,299 +1,93 @@
-html {
-  box-sizing: border-box;
+body {
+	margin: 0;
+}
+
+canvas {
+	display: block;
+}
+canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+p {
+	margin: 0 0;
+	position: absolute;
+	font: 16px Verdana;
+	color: #eee;
+	height: 25px;
+	top: calc(100vh - 30px);
+	text-shadow: 0 0 2px white;
+}
+
+p a {
+	text-decoration: none;
+	color: #aaa;
+}
+
+span {
+	font-size: 11px;
+}
+
+p>a:first-of-type {
+	font-size: 20px;
 }
 
 body {
-  margin: 0;
-  font-family: "Work Sans", sans-serif;
+	overflow: hidden;
 }
-
-.container {
-  height: 100vh;
-  width: 100vh;
-  margin: 0 auto;
-  text-align: center;
-  visibility: hidden;
-  position: relative;
-  overflow: hidden;
-}
-
-.container div.six {
-  top: 10vh;
-  z-index: 1;
-}
-
-.container div.seven,
-.container div.eight {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-}
-
-.container > div {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 20vh;
-}
-
-.one {
-  font-size: 4.5rem;
-}
-
-.one > img {
-  vertical-align: middle;
-  margin-bottom: 10px;
-  max-width: 100%;
-  height: auto;
-}
-
-.two {
-  font-size: 1.2rem;
-  font-weight: lighter;
-}
-
-.three {
-  font-size: 3rem;
-}
-
-.four .text-box {
-  width: 600px;
-  margin: 0 auto;
-  border: 3px solid #aaa;
-  border-radius: 5px;
-  padding: 10px;
-  position: relative;
-}
-
-.text-box p {
-  margin: 0;
-  text-align: left;
-}
-
-.text-box span {
-  visibility: hidden;
-}
-
-.text-box .fake-btn {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  color: #fff;
-  background-color: rgb(21, 161, 237);
-  padding: 5px 8px;
-  border-radius: 3px;
-}
-
-.five p {
-  font-size: 2rem;
-  position: absolute;
-  left: 0;
-  right: 0;
-}
-
-.idea-3 strong {
-  padding: 3px 5px;
-  border-radius: 3px;
-  display: inline-block;
-}
-
-.five .idea-5 {
-  font-size: 4rem;
-}
-
-.idea-5 span,
-.idea-6 span,
-.wish-hbd span {
-  display: inline-block;
-}
-
-.idea-6 span {
-  font-size: 15rem;
-}
-
-.six {
-  position: relative;
-}
-
-.six img {
-  display: inline-block;
-  max-width: 100%;
-  height: auto;
-}
-
-.six .hat {
-  position: absolute;
-  width: 80px;
-  top: -35px;
-  left: 41.5%;
-  /* transform: scale(0.1); */
-}
-
-.baloons img {
-  display: inline-block;
-  position: absolute;
-}
-
-.baloons img:nth-child(even) {
-  left: -10%;
-}
-
-.baloons img:nth-child(odd) {
-  right: -10%;
-}
-
-.baloons img:nth-child(3n + 0) {
-  left: 30%;
-}
-
-.eight svg {
-  width: 25px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  z-index: -1;
-}
-
-.eight svg:nth-child(1) {
-  top: 7vh;
-  left: 5vw;
-  fill: #bd6ecf;
-}
-
-.eight svg:nth-child(2) {
-  top: 23vh;
-  left: 35vw;
-  fill: #7dd175;
-}
-
-.eight svg:nth-child(3) {
-  top: 33vh;
-  left: 23vw;
-  fill: #349d8b;
-}
-
-.eight svg:nth-child(4) {
-  top: 43vh;
-  left: 57vw;
-  fill: #347a9d;
-}
-
-.eight svg:nth-child(5) {
-  top: 68vh;
-  left: 7vw;
-  fill: #c66053;
-}
-
-.eight svg:nth-child(6) {
-  top: 42vh;
-  left: 77vw;
-  fill: #bfaa40;
-}
-
-.eight svg:nth-child(7) {
-  top: 68vh;
-  left: 83vw;
-  fill: #e3bae8;
-}
-
-.eight svg:nth-child(8) {
-  top: 86vh;
-  left: 37vw;
-  fill: #8762cb;
-}
-
-.eight svg:nth-child(9) {
-  top: 94vh;
-  left: 87vw;
-  fill: #9a90da;
-}
-
-.wish-hbd {
-  font-size: 3em;
-  margin: 0;
-  text-transform: uppercase;
-}
-
-.wish h5 {
-  font-weight: lighter;
-  font-size: 2rem;
-  margin: 10px 0 0;
-}
-
-.nine p {
-  font-size: 2rem;
-  font-weight: lighter;
-}
-
-#replay {
-  z-index: 3;
-  cursor: pointer;
-}
-
-/* Media Queries */
-@media screen and (max-height: 1000px) {
-  .six .hat {
-    left: 40%;
+.btn{
+	position: absolute;
+	z-index: 999;
+	height: 50px;
+	margin: 5px;
+	width: 120px;
+	background: #333;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	cursor: pointer;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	font-family: Consolas, Courier New, monospace;
+	border: solid #404c5d 1px;
+	font-size: 16px;
+	color: rgb(161, 161, 161);
+	-webkit-transition: 500ms;
+	transition: 500ms;
+	border-radius: 5px;
+	bottom: 250px;
+	left: 45%;
+	background: linear-gradient(145deg, #2e2d2d, #212121);
+	-webkit-box-shadow: -1px -5px 15px #41465b, 5px 5px 15px #41465b,
+	  inset 5px 5px 10px #212121, inset -5px -5px 10px #212121;
+	box-shadow: -1px -5px 15px #41465b, 5px 5px 15px #41465b,
+	  inset 5px 5px 10px #212121, inset -5px -5px 10px #212121;
+	  animation: fade 1s 14s 1  both;
   }
-}
-
-@media screen and (max-height: 800px) {
-  .six .hat {
-    left: 37%;
+  
+  button:hover {
+	-webkit-box-shadow: 1px 1px 13px #20232e, -1px -1px 13px #545b78;
+	box-shadow: 1px 1px 13px #20232e, -1px -1px 13px #545b78;
+	color: #d6d6d6;
+	-webkit-transition: 500ms;
+	transition: 500ms;
   }
-}
-
-@media screen and (max-height: 700px) {
-  .six .hat {
-    left: 32%;
+  
+  button:active {
+	-webkit-box-shadow: 1px 1px 13px #20232e, -1px -1px 33px #545b78;
+	box-shadow: 1px 1px 13px #20232e, -1px -1px 33px #545b78;
+	color: #d6d6d6;
+	-webkit-transition: 100ms;
+	transition: 100ms;
   }
-}
-
-@media screen and (max-height: 850px) and (max-width: 450px) {
-  .six .hat {
-    left: 32%;
+  @keyframes fade {
+	from{
+		display: none;
+	}
+	to{
+		display: block;
+	}
   }
-}
-
-@media screen and (max-width: 500px) {
-  .container {
-    width: 90%;
-  }
-
-  .four .text-box {
-    width: 90%;
-  }
-
-  .text-box .fake-btn {
-    right: 5px;
-    bottom: -38px;
-  }
-
-  .idea-5 span {
-    display: block;
-  }
-
-  .idea-6 span {
-    font-size: 10rem;
-  }
-
-  .six .hat {
-    width: 50px;
-    top: -20px;
-  }
-
-  .wish-hbd {
-    font-size: 2.2em;
-  }
-
-  .wish h5 {
-    font-size: 1.4rem;
-  }
-
-  .nine p {
-    font-size: 1.5rem;
-    font-weight: lighter;
-  }
-}
